UPDATE AsDoc to v0.0.5a

--- a/asdoc-output/all-classes.html
+++ b/asdoc-output/all-classes.html
@@ -11,6 +11,9 @@
       <h3><a href="class-summary.html" target="classFrame" style="color:black">All Classes</a></h3>
       <table cellpadding="0" cellspacing="0">
          <tr>
+            <td><a href="org/idream/pomelo/interfaces/IMessage.html" title="org.idream.pomelo.interfaces.IMessage"><i>IMessage</i></a></td>
+         </tr>
+         <tr>
             <td><a href="org/idream/pomelo/Message.html" title="org.idream.pomelo.Message">Message</a></td>
          </tr>
          <tr>
@@ -31,4 +34,4 @@
       </table>
    </body>
 </html>
-<!--<br/>Fri Jul 5 2013, 09:53 PM +08:00  -->
+<!--<br/>Sun Jul 14 2013, 12:58 PM +08:00  -->
