--- a/asdoc-output/all-classes.html
+++ b/asdoc-output/all-classes.html
@@ -14,6 +14,9 @@
             <td><a href="org/idream/pomelo/interfaces/IMessage.html" title="org.idream.pomelo.interfaces.IMessage"><i>IMessage</i></a></td>
          </tr>
          <tr>
+            <td><a href="org/idream/pomelo/interfaces/IPackage.html" title="org.idream.pomelo.interfaces.IPackage"><i>IPackage</i></a></td>
+         </tr>
+         <tr>
             <td><a href="org/idream/pomelo/Message.html" title="org.idream.pomelo.Message">Message</a></td>
          </tr>
          <tr>
@@ -31,7 +34,13 @@
          <tr>
             <td><a href="org/idream/pomelo/Protocol.html" title="org.idream.pomelo.Protocol">Protocol</a></td>
          </tr>
+         <tr>
+            <td><a href="org/idream/pomelo/Request.html" title="org.idream.pomelo.Request">Request</a></td>
+         </tr>
+         <tr>
+            <td><a href="org/idream/pomelo/Routedic.html" title="org.idream.pomelo.Routedic">Routedic</a></td>
+         </tr>
       </table>
    </body>
 </html>
-<!--<br/>Sun Jul 14 2013, 12:58 PM +08:00  -->
+<!--<br/>Mon Nov 25 2013, 03:24 PM +08:00  -->
