--- a/asdoc-output/index-list.html
+++ b/asdoc-output/index-list.html
@@ -67,4 +67,4 @@
 <td><a href="all-index-Z.html">Z</a></td>
 </tr>
 </tbody></table>
-</body><!--<br/>Mon Nov 25 2013, 03:24 PM +08:00  --></html>
+</body><!--<br/>Tue Nov 26 2013, 11:39 AM +08:00  --></html>
